--- a/index.html
+++ b/index.html
@@ -1,67 +1,64 @@
 <!DOCTYPE html>
+<html lang="es">
 <head>
-<title>Pagina Web de Pandas</title>
-<link href="estilos.css" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="estilos.css" rel="stylesheet">
+    <title>Clon de Google</title>
 </head>
-
 <body>
-<h1>Andys Webssite</h1>
-<h3>Imagenes de panda</h3>
-<!-- Imagen desde intertet-->
-<img src="https://www.hogarmania.com/archivos/202209/curiosidades-del-oso-panda-1280x720x80xX.jpg" alt="">
-<!-- Imagen desde computadora-->
-<img src="img/panda.jpg" alt="" height="950px">
-  <!---Listas-->
-  <h3>Listas de pandas</h3>
-  <p>3 cosas que los pandan <strong>aman</strong></p>
-  <ol>
-    <li>Bambu</li>
-    <li>Jugar</li>
-    <li>Dormir</li>
-  </ol>
-  <!--Lista desordenada-->
-  <p>3 cosas que los pandan <strong>odian</strong></p>
-  <ul>
-    <li>Ser molestados</li>
-    <li>Hacer ejercicio</li>
-    <li>Tener hambre</li>
-  </ul>
-  <p> ¿Quieres saber más cosas de pandas? Sigue <a href="pandas.com" target="_blank">pandas</a></pataspandas></p>
-
-  <!---Formularios-->
-  <form action="" method="get">
-    <!--Formulario con botones de radio-->
-    <p>¿Te gustan los pandas?</p>
-    <label for="">
-      <input id="si" type="radio" value="si" name="Pandas" checked> Me encantan
-    </label>
-    <br>
-    <label for="">
-      <input id="no" type="radio" value="no" name="Pandas"> No me gustan
-    </label>
-    <br>
-    <!--Formulario con checkbox-->
-<p>¿Quieres ser mi novio, Carlos?</p>
-<label>
-<input id="amoroso" type="checkbox" value="amoroso" name="novio"> Si
-</label>
-<br>  
-<label>
-  <input id="noquiero" type="checkbox" value="noquiero" name="novio"> No
-  </label> 
-  <br>
-  <label>
-    <input id="todalavida" type="checkbox" value="todalavida" name="novio"> Toda la vida, mi amor
-    </label> 
-</form>
-
-</body>
-
-
+ <header>
+    <nav>
+        <ul class="nav-right-section">
+            <li><a href="https://mail.google.com/mail/?tab=rm&ogbl">Gmail</a></li>
+            <li><a href="https://www.google.com.mx/imghp?hl=es&tab=ri&ogbl">Imágenes</a></li>
+            <li class="menu-icon"></li>
+            <li><img src="https://lh3.googleusercontent.com/ogw/AAEL6sjJVVjwdHb96QA7yssPJA6tDexDIOyFxdU4A8MqLeU=s32-c-mo"></li>
+        </ul>
+    </nav>
+ </header>   
+<main>
+    <!---Logo-->
+    <section class="main-logo">
+        <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="">
+    </section>
+    
+    <!--Bara de navegación/búsqueda-->
+    <section class="main-input">
+        <div class="main-input-container">
+            <span class="search-icon"></span>
+                <input type="text">
+                    <a class="micro-icon" href="#"></a>
+                    <a class="cam-icon" href="#"></a>
+        </div>
+    </section>
+    
+    <!---Botones-->
+    <section class="main-buttons">
+        <div>
+            <button> Buscar con Google</button>
+        </div>
+        <div>
+            <button>Voy a tener suerte</button>
+        </div>
+    </section>
+</main>
 <footer>
-<p><small>Está página fue creada durante el bootcamp de <a href="https://tecnolochicas.mx/"> TecnolochicasPRO </a></small> </p>
+    <!---Lista izquierda-->
+<ul class="footer-left">
+    <li><a href="https://about.google/?utm_source=google-MX&utm_medium=referral&utm_campaign=hp-footer&fg=1">Sobre Google</a></li>
+    <li><a href="https://www.google.com/intl/es_mx/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicidad</a></li>
+    <li><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Negocios</a></li>
+    <li><a href="https://google.com/search/howsearchworks/?fg=1">Cómo funciona la Búsqueda</a></li>
+</ul>
+
+<!---Lista derecha-->
+<ul class="footer-right">
+    <li><a href="https://policies.google.com/privacy?hl=es-MX&fg=1"> Privacidad</a></li>
+    <li><a href="https://policies.google.com/terms?hl=es-MX&fg=1"> Condiciones</a></li>
+    <li><a href="#"> Preferencias</a></li>
+</ul>
 </footer>
+</body>
 </html>
